# shift_master_agenda

./: .pre-commit-config copy.yaml  .pre-commit-config.yaml  README.md  coverage.xml  manage.py  package-lock.json  pyproject.toml  setup.cfg
api/: serializers.py  urls.py  views.py
api/templates/: login.html
calendario4/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
calendario4/config/: const_tests.py  constants.py  test_mocks.py
calendario4/controllers/: UserAdapter.py  alterDayController.py  configController.py  scheduleController.py  signUpController.py  utils.py
calendario4/logic/: Day.py  Month.py  Pattern.py  Recap.py  Schedule.py  Shift.py  Week.py
calendario4/middleware/: ScheduleMiddleware.py
calendario4/static/assets/css/: main.css
calendario4/static/assets/js/: main.js
calendario4/templates/: agenda.html  alterDay.html  alter_day.html  base.html  change_color_days.html  change_pass.html  config.html  home.html  next_years.html  recap.html
calendario4/templates/registration/: login.html  signup.html
loto/: .gitingnore  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
loto/config/: constants.py  constants_tests.py
loto/controllers/: LotoController.py  PlayerTurn.py
loto/migrations/: 0001_initial.py  0002_alter_prize_player.py  0003_rename_prize_prize_amount.py
loto/templates/: hola.html  login.html  loto.html
